--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,13 +1,15 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Format & Lint
 
 on:
   push:
     branches: [ "develop", "main" ]
+    paths: [ "src/**", "tests/**" ]
   pull_request:
     branches: [ "develop", "main" ]
+    paths: [ "src/**", "tests/**" ]
 
 permissions:
   contents: read
@@ -26,15 +28,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install ruff pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         sudo apt update && sudo apt install ffmpeg
-    - name: Lint with flake8
+    - name: Format with ruff
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        ruff format src tests
+    - name: Lint with ruff
+      run: |
+        ruff check src tests --fix
     - name: Run tests
       run: |
         pytest
