--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.22.3
+scikit-learn==1.6.0
 six==1.17.0
 smmap==5.0.1
 streamlit==1.41.0
