--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,4 +29,7 @@ jobs:
 
       - name: Run tests
         run: |
+          pytest tests/test_load_dataset.py
           pytest tests/test_model.py
+          pytest tests/test_save_model.py
+          pytest tests/test_spaces_in_dataset.py
