--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,27 +9,17 @@ on:
     paths: [ "docker-compose.yaml", "Dockerfile", "src/**", "tests/**" ]
 
 jobs:
-  test:
+  docker-build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-
-      - name: Install dependencies and pytest
+      - name: Build Docker image
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+          docker build -t urfu_sber:latest .
 
-      - name: Run tests
+      - name: Run tests in Docker container
         run: |
-          pytest tests/test_load_dataset.py
-          pytest tests/test_model.py
-          pytest tests/test_save_model.py
-          pytest tests/test_spaces_in_dataset.py
+          docker run --rm urfu_sber:latest pytest tests/
