--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,17 +9,27 @@ on:
     paths: [ "docker-compose.yaml", "Dockerfile", "src/**", "tests/**" ]
 
 jobs:
-  docker-build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          docker build -t urfu_sber:latest .
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
 
-      - name: Run tests in Docker container
+      - name: Install dependencies and pytest
         run: |
-          docker run --rm urfu_sber:latest pytest tests/
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run tests
+        run: |
+          pytest tests/test_load_dataset.py
+          pytest tests/test_model.py
+          pytest tests/test_save_model.py
+          pytest tests/test_spaces_in_dataset.py
