--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,5 +31,4 @@ jobs:
         run: |
           pytest tests/test_load_dataset.py
           pytest tests/test_model.py
-          pytest tests/test_save_model.py
-          pytest tests/test_spaces_in_dataset.py
+          pytest tests/test_calculations.py
