--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,4 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest tests/test_load_dataset.py
-          pytest tests/test_model.py
-          pytest tests/test_calculations.py
+          pytest
